# LingJian-Pinyin

./: CMakeLists.txt  README.md  build_deb.sh  run.sh
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/.qt/: QtDeploySupport.cmake
build-test/src/: Makefile  cmake_install.cmake
build-test/src/core/: Makefile  cmake_install.cmake
build-test/src/dict/: Makefile  cmake_install.cmake
build-test/src/ui/: Makefile  cmake_install.cmake  lingjian_ui
build-test/src/ui/lingjian_ui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-test/src/ui/lingjian_ui_autogen/EWIEGA46WW/: moc_candidate_view.cpp  moc_input_widget.cpp  moc_skin_selector.cpp  moc_soft_keyboard.cpp  moc_status_bar.cpp  moc_status_bar_menu.cpp  moc_theme_manager.cpp
build-test/src/utils/: Makefile  cmake_install.cmake
data/: pinyin_dict.txt
data/skins/default/: skin.ini
scripts/: update_dict_from_rime.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  context.cpp  context.h  decoder.cpp  decoder.h  dictionary.cpp  dictionary.h  language_model.cpp  language_model.h  lru_cache.h  pinyin_segmenter.cpp  pinyin_segmenter.h  sentence_decoder.cpp  sentence_decoder.h
src/dict/: CMakeLists.txt  dictionary_placeholder.cpp
src/fcitx/: CMakeLists.txt  addon.cpp  engine.cpp  engine.h  lingjian.cpp
src/ui/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  candidate_view.cpp  candidate_view.h  help_submenu.cpp  help_submenu.h  input_widget.cpp  input_widget.h  main.cpp  more_input_submenu.cpp  more_input_submenu.h  skin_loader.cpp  skin_loader.h  skin_selector.cpp  skin_selector.h  soft_keyboard.cpp  soft_keyboard.h  status_bar.cpp  status_bar.h  status_bar_menu.cpp  status_bar_menu.h  theme_manager.cpp  theme_manager.h  themed_message_box.cpp  themed_message_box.h  voice_input_dialog.cpp  voice_input_dialog.h
src/utils/: CMakeLists.txt  sc_tc_converter.cpp  sc_tc_converter.h  utils_placeholder.cpp
src/voice/: CMakeLists.txt  alsa_capture_thread.cpp  alsa_capture_thread.h  voice_input_test.cpp  vosk_speech_engine.cpp  vosk_speech_engine.h
